--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,8 @@
 %% process, or `all' to process all files which you \include.
 %% Krishna Sethuraman (1990).
 
+\pgfplotsset{compat=1.3}
+
 \begin{document}
 
 \include{cover}
